upload html with updates

--- a/tutorial/html/integrated_learners/index.html
+++ b/tutorial/html/integrated_learners/index.html
@@ -251,16 +251,6 @@ For example <em>rcens</em> means that the learning method can deal with right ce
 Moreover, the type of prediction is displayed, where <em>prob</em> indicates that probabilities
 can be predicted.
 For <em>regression</em>, <em>se</em> means that standard errors and the mean response can be predicted.</p>
-<style type="text/css">
-<!--
-.col-md-9 td {
-border: solid 1px #ccc;
-padding: 0.1em;
-vertical-align: top;
-}
--->
-</style>
-
 <h3 id="classification">Classification</h3>
 <table>
 <thead>
@@ -392,7 +382,7 @@ vertical-align: top;
 <td align="left">GLM with Lasso or Elasticnet Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center"></td>
+<td align="center">X</td>
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right">multiclass<br />prob<br />twoclass</td>
@@ -861,7 +851,7 @@ vertical-align: top;
 <td align="left">GLM with Lasso or Elasticnet Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center"></td>
+<td align="center">X</td>
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right"></td>
@@ -1121,7 +1111,7 @@ vertical-align: top;
 <td align="left">GLM with Regularization (Cross Validated Lambda)</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center"></td>
+<td align="center">X</td>
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right">rcens</td>
@@ -1143,7 +1133,7 @@ vertical-align: top;
 <td align="left">GLM with Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center"></td>
+<td align="center">X</td>
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right">rcens</td>
