--- a/tutorial/html/resample/index.html
+++ b/tutorial/html/resample/index.html
@@ -390,73 +390,72 @@ r = resample(&quot;cluster.XMeans&quot;, mtcars.task, rdesc, measures = list(dun
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [Resample] subsampling iter: 1
-#&gt; Loading required package: clusterSim
 #&gt; [Resample] subsampling iter: 2
 #&gt; [Resample] subsampling iter: 3
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): kein nicht-fehlendes Argument für min;
+#&gt; gebe Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): no non-missing arguments to max;
-#&gt; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): kein nicht-fehlendes Argument für max;
+#&gt; gebe -Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): kein nicht-fehlendes Argument für min;
+#&gt; gebe Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): no non-missing arguments to
-#&gt; max; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): kein nicht-fehlendes Argument
+#&gt; für max; gebe -Inf zurück
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [Resample] subsampling iter: 4
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): no non-missing arguments to max;
-#&gt; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): kein nicht-fehlendes Argument für max;
+#&gt; gebe -Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): kein nicht-fehlendes Argument für min;
+#&gt; gebe Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): kein nicht-fehlendes Argument für min;
+#&gt; gebe Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): no non-missing arguments to
-#&gt; max; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): kein nicht-fehlendes Argument
+#&gt; für max; gebe -Inf zurück
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [Resample] subsampling iter: 5
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): kein nicht-fehlendes Argument für min;
+#&gt; gebe Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): no non-missing arguments to max;
-#&gt; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): kein nicht-fehlendes Argument für max;
+#&gt; gebe -Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): kein nicht-fehlendes Argument für min;
+#&gt; gebe Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): no non-missing arguments to
-#&gt; max; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): kein nicht-fehlendes Argument
+#&gt; für max; gebe -Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; [Resample] Result: dunn.test.mean=0.958,db.test.mean=0.425,timetrain.test.mean=0.0432
+<pre class="prettyprint well"><code>#&gt; [Resample] Result: dunn.test.mean=0.958,db.test.mean=0.425,timetrain.test.mean=0.0918
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;      dunn.test.mean        db.test.mean timetrain.test.mean 
-#&gt;           0.9576313           0.4253807           0.0432000
+#&gt;           0.9576313           0.4253807           0.0918000
 </code></pre>
 
 <h2 id="stratified-resampling">Stratified resampling</h2>
