--- a/tutorial/html/resample/index.html
+++ b/tutorial/html/resample/index.html
@@ -249,7 +249,7 @@ on the training set as well) and calculate some performance measure.
 Then the individual performance values are aggregated, typically by calculating the mean.
 There exist various different resampling strategies, for example
 cross-validation and bootstrap, to mention just two popular approaches.</p>
-<p><img alt="Resampling Figure" src="../../../../images/resampling.png" title="Resampling Figure" /></p>
+<p><img alt="Resampling Figure" src="../../../images/resampling.png" title="Resampling Figure" /></p>
 <p>In <a href="http://www.rdocumentation.org/packages/mlr/">mlr</a> the resampling strategy can be chosen via the function <a href="http://www.rdocumentation.org/packages/mlr/functions/makeResampleDesc.html">makeResampleDesc</a>.
 The supported resampling strategies are:</p>
 <ul>
