update tutorial because of new measure slots

--- a/tutorial/html/cost_sensitive_classif/index.html
+++ b/tutorial/html/cost_sensitive_classif/index.html
@@ -455,7 +455,8 @@ true class labels and the columns predicted class labels.</p>
 credit.costs
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Performance measure: credit.costs
+<pre class="prettyprint well"><code>#&gt; Name: credit.costs
+#&gt; Performance measure: credit.costs
 #&gt; Properties: classif,classif.multi
 #&gt; Minimize: TRUE
 #&gt; Best: 0; Worst: 5
@@ -898,7 +899,7 @@ pred
 <pre class="prettyprint well"><code>#&gt; Prediction: 150 observations
 #&gt; predict.type: response
 #&gt; threshold: 
-#&gt; time: 0.09
+#&gt; time: 0.07
 #&gt;   id response
 #&gt; 1  1   setosa
 #&gt; 2  2   setosa
