--- a/tutorial/html/feature_selection/index.html
+++ b/tutorial/html/feature_selection/index.html
@@ -406,13 +406,13 @@ res = tuneParams(lrn, task = bh.task, resampling = rdesc, par.set = ps,
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;   fw.perc mse.test.mean dob eol error.message exec.time
-#&gt; 1     0.2      40.59578   1  NA          &lt;NA&gt;     0.521
-#&gt; 2    0.25      40.59578   2  NA          &lt;NA&gt;     0.408
-#&gt; 3     0.3      37.05592   3  NA          &lt;NA&gt;     0.571
-#&gt; 4    0.35      35.83712   4  NA          &lt;NA&gt;     0.544
-#&gt; 5     0.4      35.83712   5  NA          &lt;NA&gt;     0.365
-#&gt; 6    0.45      27.39955   6  NA          &lt;NA&gt;     0.368
-#&gt; 7     0.5      27.39955   7  NA          &lt;NA&gt;     0.508
+#&gt; 1     0.2      40.59578   1  NA          &lt;NA&gt;     0.349
+#&gt; 2    0.25      40.59578   2  NA          &lt;NA&gt;     0.371
+#&gt; 3     0.3      37.05592   3  NA          &lt;NA&gt;     0.363
+#&gt; 4    0.35      35.83712   4  NA          &lt;NA&gt;     0.350
+#&gt; 5     0.4      35.83712   5  NA          &lt;NA&gt;     0.362
+#&gt; 6    0.45      27.39955   6  NA          &lt;NA&gt;     0.325
+#&gt; 7     0.5      27.39955   7  NA          &lt;NA&gt;     0.338
 </code></pre>
 
 <p>The optimal percentage and the corresponding performance can be accessed as follows:</p>
@@ -475,12 +475,12 @@ res
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;   fw.threshold fpr.test.mean fnr.test.mean dob eol error.message exec.time
-#&gt; 1    0.4892321     0.3092818     0.2639033   1  NA          &lt;NA&gt;     5.184
-#&gt; 2    0.2481696     0.2045499     0.2319697   2  NA          &lt;NA&gt;     5.185
-#&gt; 3    0.7691875     0.5128000     0.3459740   3  NA          &lt;NA&gt;     3.635
-#&gt; 4    0.1470133     0.2045499     0.2319697   4  NA          &lt;NA&gt;     3.829
-#&gt; 5    0.5958241     0.5028216     0.5239538   5  NA          &lt;NA&gt;     4.018
-#&gt; 6    0.6892421     0.6323959     0.4480808   6  NA          &lt;NA&gt;     3.625
+#&gt; 1    0.4892321     0.3092818     0.2639033   1  NA          &lt;NA&gt;     3.514
+#&gt; 2    0.2481696     0.2045499     0.2319697   2  NA          &lt;NA&gt;     3.546
+#&gt; 3    0.7691875     0.5128000     0.3459740   3  NA          &lt;NA&gt;     3.447
+#&gt; 4    0.1470133     0.2045499     0.2319697   4  NA          &lt;NA&gt;     3.568
+#&gt; 5    0.5958241     0.5028216     0.5239538   5  NA          &lt;NA&gt;     3.213
+#&gt; 6    0.6892421     0.6323959     0.4480808   6  NA          &lt;NA&gt;     3.444
 </code></pre>
 
 <p>The results can be visualized with function <a href="http://www.rdocumentation.org/packages/mlr/functions/plotTuneMultiCritResult.html">plotTuneMultiCritResult</a>.
@@ -527,6 +527,7 @@ ctrl
 #&gt; 
 #&gt; Max. features: &lt;not used&gt;
 #&gt; Max. iterations: 20
+#&gt; Tune threshold: FALSE
 #&gt; Further arguments: prob=0.5
 </code></pre>
 
