--- a/tutorial/html/resample/index.html
+++ b/tutorial/html/resample/index.html
@@ -448,14 +448,14 @@ r = resample(&quot;cluster.XMeans&quot;, mtcars.task, rdesc, measures = list(dun
 #&gt; für max; gebe -Inf zurück
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; [Resample] Result: dunn.test.mean=0.958,db.test.mean=0.425,timetrain.test.mean=0.0918
+<pre class="prettyprint well"><code>#&gt; [Resample] Result: dunn.test.mean=0.958,db.test.mean=0.425,timetrain.test.mean=0.109
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;      dunn.test.mean        db.test.mean timetrain.test.mean 
-#&gt;           0.9576313           0.4253807           0.0918000
+#&gt;           0.9576313           0.4253807           0.1094000
 </code></pre>
 
 <h2 id="stratified-resampling">Stratified resampling</h2>
@@ -777,12 +777,13 @@ b632plus.mmce = setAggregation(mmce, b632plus)
 b632.mmce
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Performance measure: mmce
+<pre class="prettyprint well"><code>#&gt; Name: Mean misclassification error
+#&gt; Performance measure: mmce
 #&gt; Properties: classif,classif.multi
 #&gt; Minimize: TRUE
 #&gt; Best: 0; Worst: 1
 #&gt; Aggregated by: b632
-#&gt; Note: Mean misclassification error
+#&gt; Note:
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r = resample(&quot;classif.rpart&quot;, iris.task, rdesc,
