add bit about viper charts

--- a/tutorial/html/integrated_learners/index.html
+++ b/tutorial/html/integrated_learners/index.html
@@ -382,11 +382,11 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left">GLM with Lasso or Elasticnet Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center">X</td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left">Factors automatically get converted to dummy columns, ordered factors to integer</td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left"><strong>classif.IBk</strong> <br />ibk</td>
@@ -751,17 +751,6 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="right">multiclass<br />prob<br />twoclass</td>
 <td align="left"></td>
 </tr>
-<tr>
-<td align="left"><strong>classif.xgboost</strong> <br />xgb</td>
-<td align="left">eXtreme Gradient Boosting</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/xgboost/">xgboost</a></td>
-<td align="center"></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">multiclass<br />twoclass</td>
-<td align="left"><code>nround</code> should be set to value higher then 1 for more accuracy.</td>
-</tr>
 </tbody>
 </table>
 <h3 id="regression">Regression</h3>
@@ -862,11 +851,11 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left">GLM with Lasso or Elasticnet Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center">X</td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">ordered</td>
-<td align="left">Factors automatically get converted to dummy columns, ordered factors to integer</td>
+<td align="right"></td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left"><strong>regr.IBk</strong> <br />ibk</td>
@@ -936,7 +925,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 </tr>
 <tr>
 <td align="left"><strong>regr.mob</strong> <br />mob</td>
-<td align="left">Model-based Recursive Partitioning  Yielding a Tree with Fitted Models Associated with each Terminal Node</td>
+<td align="left">Model-based Recursive Partitioning Yielding a Tree with Fitted Models Associated with each Terminal Node</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/party/">party</a></td>
 <td align="center">X</td>
 <td align="center">X</td>
@@ -1053,7 +1042,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
-<td align="left">Kernel parameters have to be passed directly and not by using the kpar list in rvm.   Note that <code>fit</code> has been set to <code>FALSE</code> by default for speed.</td>
+<td align="left">Kernel parameters have to be passed directly and not by using the kpar list in rvm.  Note that <code>fit</code> has been set to <code>FALSE</code> by default for speed.</td>
 </tr>
 <tr>
 <td align="left"><strong>regr.svm</strong> <br />svm</td>
@@ -1100,11 +1089,11 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left">Cox Proportional Hazards Model with Componentwise Likelihood based Boosting</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/CoxBoost/">CoxBoost</a></td>
 <td align="center">X</td>
-<td align="center">X</td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">ordered<br />rcens</td>
-<td align="left">Factors automatically get converted to dummy columns, ordered factors to integer</td>
+<td align="right">rcens</td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left"><strong>surv.coxph</strong> <br />coxph</td>
@@ -1122,11 +1111,11 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left">GLM with Regularization (Cross Validated Lambda)</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center">X</td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">ordered<br />rcens</td>
-<td align="left">Factors automatically get converted to dummy columns, ordered factors to integer</td>
+<td align="right">rcens</td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left"><strong>surv.glmboost</strong> <br />glmboost</td>
@@ -1136,7 +1125,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center">X</td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">ordered<br />rcens</td>
+<td align="right">rcens</td>
 <td align="left"></td>
 </tr>
 <tr>
@@ -1144,11 +1133,22 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left">GLM with Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
 <td align="center">X</td>
-<td align="center">X</td>
+<td align="center"></td>
 <td align="center"></td>
 <td align="center">X</td>
-<td align="right">ordered<br />rcens</td>
-<td align="left">Factors automatically get converted to dummy columns, ordered factors to integer</td>
+<td align="right">rcens</td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left"><strong>surv.optimCoxBoostPenalty</strong> <br />coxboost</td>
+<td align="left">Cox Proportional Hazards Model with Componentwise Likelihood based Boosting</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/CoxBoost/">CoxBoost</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center">X</td>
+<td align="right">rcens</td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left"><strong>surv.penalized</strong> <br />penalized</td>
@@ -1158,8 +1158,8 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center">X</td>
 <td align="center"></td>
 <td align="center"></td>
-<td align="right">ordered<br />rcens</td>
-<td align="left">Factors automatically get converted to dummy columns, ordered factors to integer</td>
+<td align="right">rcens</td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left"><strong>surv.randomForestSRC</strong> <br />rfsrc</td>
@@ -1169,7 +1169,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center">X</td>
 <td align="center">X</td>
 <td align="center"></td>
-<td align="right">ordered<br />rcens</td>
+<td align="right">rcens</td>
 <td align="left"></td>
 </tr>
 </tbody>
