--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -245,8 +245,12 @@ strategy for each <a href="http://www.rdocumentation.org/packages/mlr/functions/
 <h3 id="example-two-tasks-and-two-learners">Example: Two tasks and two learners</h3>
 <pre class="prettyprint well"><code class="r">## Two learners to be compared
 lrns = list(makeLearner(&quot;classif.lda&quot;), makeLearner(&quot;classif.rpart&quot;))
+</code></pre>
 
-## Two classification tasks
+<pre class="prettyprint well"><code>#&gt; Loading required package: MASS
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">## Two classification tasks
 tasks = list(iris.task, sonar.task)
 
 ## Use 5-fold cross-validation for both tasks
@@ -257,11 +261,11 @@ res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
 res
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt;         task.id    learner.id mmce.test.mean
-#&gt; 1  iris-example   classif.lda     0.04000000
-#&gt; 2  iris-example classif.rpart     0.06666667
-#&gt; 3 Sonar-example   classif.lda     0.23577236
-#&gt; 4 Sonar-example classif.rpart     0.26980256
+<pre class="prettyprint well"><code>#&gt;            task       learner mmce.test.mean
+#&gt; 1  iris-example   classif.lda        0.04000
+#&gt; 2  iris-example classif.rpart        0.06667
+#&gt; 3 Sonar-example   classif.lda        0.23577
+#&gt; 4 Sonar-example classif.rpart        0.26980
 </code></pre>
 
 <p>The above code should be self-explanatory. In the result every row corresponds to one <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>
