--- a/tutorial/html/index.html
+++ b/tutorial/html/index.html
@@ -240,6 +240,7 @@ optimization in <strong>R</strong>.</p>
 For detailed technical information and manual pages, please refer to the package's
 <a href="http://berndbischl.github.io/mlr/man/">manual pages</a>.
 They are regularly updated and reflect the documentation of the current package version on CRAN.</p>
+<p>An offline version of this of this tutorial is available to <a href="http://berndbischl.github.io/mlr/tutorial/mlr_tutorial.zip">download here</a>.</p>
 <p>The tutorial explains the basic analysis of a data set step by step:</p>
 <ul>
 <li>What is your data and the aim of your analysis? <a href="task/index.html">Tasks</a></li>
